--- a/250703/Phython_v.05_.ipynb
+++ b/250703/Phython_v.05_.ipynb
@@ -699,6 +699,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "a2cc5b99-cf77-4c79-8b2c-d6fdcfbff53b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 3, 4, 5]\n",
+      "[2, 4, 3, 4, 5]\n",
+      "[2, 4, 6, 4, 5]\n",
+      "[2, 4, 6, 8, 5]\n",
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "for i in range(len(numbers)):\n",
+    "    numbers[i] = numbers[i] * 2  # 인덱스로 직접 수정\n",
+    "    print(numbers) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "45f48bed-38b6-4b0f-a481-7a9e685dd1a6",
    "metadata": {},
